--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 </head>
 
 <body style="margin: 0px;">
-    <canvas id="canvas" width="1920" height="1080"></canvas>
+    <div id="bg" style="background-color:#fff1b2;"></div>
+    <div id="container"
+        style="background-color:#1e9aec;pointer-events:none;position:absolute;top:0px;left:0px;width:0px;height:0px;">
+    </div>
     <script src="main.js"></script>
 </body>
 
