--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 
 <head>
-    <title>FeelsAmazingMan Javascript</title>
+    <title>VPL</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
-<body style="margin: 0px;">
-    <div id="bg" style="background-color:#fff1b2;"></div>
-    <div id="container"
-        style="background-color:#1e9aec;pointer-events:none;position:absolute;top:0px;left:0px;width:0px;height:0px;">
+<body>
+    <div id="bg"></div>
+    <div id="container">
     </div>
     <script src="main.js"></script>
 </body>
