--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <div id="bg"></div>
     <div id="container">
+        <svg id="svgContainer" width="300" height="300"></svg>
     </div>
     <script src="main.js"></script>
 </body>
